[package]
name = "rust_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
kube = { version = "0.80.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
thiserror = "1.0.29"
futures = "0.3.17"
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"

[[rust_controller]]
name = "podset_controller"
path = "src/podset_controller.rs"

[[rust_controller]]
name = "zookeeper_api"
path = "src/zookeeper_type.rs"